<resources>
    <string name="app_name">BinList</string>
    <string name="history">История</string>
    <string name="scheme_network">Scheme/Network</string>
    <string name="brand">Brand</string>
    <string name="card_number">Card number</string>
    <string name="length">Length</string>
    <string name="luhn">Luhn</string>
    <string name="yes">Yes</string>
    <string name="splash">/</string>
    <string name="no">No</string>
    <string name="bank">Bank</string>
    <string name="empty_value">-</string>
    <string name="type">Type</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">Country</string>
    <string name="latitude">(latitude:</string>
    <string name="comma">,</string>
    <string name="longitude">longitude:</string>
    <string name="parenthesis">)</string>
    <string name="enter_the_first_digits_of_a_card_number">Enter the first digits\nof a card number (BIN/IIN)</string>
    <string name="load">Load</string>
</resources>