<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_padding"
    app:cardCornerRadius="@dimen/card_padding"
    app:cardElevation="@dimen/card_padding"
    app:contentPadding="@dimen/card_padding"
    app:cardBackgroundColor="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/schemeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme_network"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/schemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:text="@string/empty_value"
        app:layout_constraintStart_toStartOf="@+id/schemeTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/schemeTitleTextView"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/brandTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/brand"
        app:layout_constraintTop_toBottomOf="@+id/schemeTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/brandTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_value"
        android:layout_marginTop="@dimen/small_vertical_margin"
        app:layout_constraintStart_toStartOf="@+id/brandTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/brandTitleTextView"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/cardNumberTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/card_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandTextView"/>

    <TextView
        style="@style/TextStyle.TextSubHeaderStyle"
        android:id="@+id/cardNumberLengthTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:text="@string/length"
        app:layout_constraintStart_toStartOf="@+id/cardNumberTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberTitleTextView"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/cardNumberLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_value"
        app:layout_constraintStart_toStartOf="@+id/cardNumberLengthTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLengthTitleTextView"/>

    <TextView
        style="@style/TextStyle.TextSubHeaderStyle"
        android:id="@+id/cardNumberLuhnTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/luhn"
        app:layout_constraintStart_toEndOf="@+id/cardNumberLengthTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/cardNumberLengthTitleTextView"/>

    <TextView
        android:id="@+id/cardNumberLuhnYesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/yes"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="@+id/cardNumberLuhnTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLuhnTitleTextView"/>

    <TextView
        android:id="@+id/cardNumberLuhnSplashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:textColor="@android:color/darker_gray"
        android:text="@string/splash"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/cardNumberLuhnYesTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLuhnTitleTextView"/>

    <TextView
        android:id="@+id/cardNumberLuhnNoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:textColor="@android:color/darker_gray"
        android:text="@string/no"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/cardNumberLuhnSplashTextView"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLuhnTitleTextView"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/bankTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberLengthTextView"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/bankTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:text="@string/empty_value"
        app:layout_constraintStart_toStartOf="@+id/bankTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/bankTitleTextView"/>

    <TextView
        android:id="@+id/bankWebsiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/small_margin_start"
        android:textSize="@dimen/text_size"
        android:autoLink="web"
        android:text="@string/empty_value"
        app:layout_constraintStart_toStartOf="@+id/bankTextView"
        app:layout_constraintTop_toBottomOf="@+id/bankTextView"/>

    <TextView
        android:id="@+id/bankPhoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/small_margin_start"
        android:text="@string/empty_value"
        android:textSize="@dimen/text_size"
        android:autoLink="phone"
        app:layout_constraintStart_toStartOf="@+id/bankWebsiteTextView"
        app:layout_constraintTop_toBottomOf="@+id/bankWebsiteTextView"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="schemeTitleTextView,schemeTextView,brandTitleTextView,
        brandTextView,cardNumberTitleTextView,cardNumberLuhnTitleTextView,cardNumberLuhnNoTextView,bankTitleTextView,
        bankTextView,bankWebsiteTextView,bankPhoneTextView"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/typeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_columns"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/typeDebitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:text="@string/debit"
        app:layout_constraintStart_toStartOf="@+id/typeTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTitleTextView"/>

    <TextView
        android:id="@+id/typeSplashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/small_margin_start"
        android:text="@string/splash"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/typeDebitTextView"
        app:layout_constraintTop_toTopOf="@+id/typeDebitTextView"/>

    <TextView
        style="@style/NormalTextStyle.Disabled"
        android:id="@+id/typeCreditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:text="@string/credit"
        app:layout_constraintStart_toEndOf="@+id/typeSplashTextView"
        app:layout_constraintTop_toTopOf="@+id/typeDebitTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/prepaidTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/space_between_columns"
        android:text="@string/prepaid"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/typeCreditTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/NormalTextStyle.Disabled"
        android:id="@+id/prepaidYesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="@+id/prepaidTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/prepaidTitleTextView"/>

    <TextView
        android:id="@+id/prepaidSplashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="@dimen/small_margin_start"
        android:text="@string/splash"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/prepaidYesTextView"
        app:layout_constraintTop_toTopOf="@+id/prepaidYesTextView"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/prepaidNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_start"
        android:text="@string/no"
        app:layout_constraintStart_toEndOf="@+id/prepaidSplashTextView"
        app:layout_constraintTop_toTopOf="@+id/prepaidYesTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/TextStyle.TextHeaderStyle"
        android:id="@+id/countryTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/space_between_columns"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/prepaidNoTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/NormalTextStyle"
        android:id="@+id/countryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:layout_marginStart="@dimen/space_between_columns"
        android:text="@string/empty_value"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/countryTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/countryLatitudeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/latitude"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/countryTextView"
        app:layout_constraintEnd_toStartOf="@+id/countryLatitudeTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView"/>

    <TextView
        android:id="@+id/countryLatitudeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:textColor="@android:color/black"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/empty_value"
        app:layout_constraintStart_toEndOf="@+id/countryLatitudeTitleTextView"
        app:layout_constraintEnd_toStartOf="@+id/countryCommaTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

    <TextView
        android:id="@+id/countryCommaTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/comma"
        app:layout_constraintStart_toEndOf="@+id/countryLatitudeTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/countryLongitudeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:layout_marginStart="@dimen/space_between_columns"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/longitude"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/countryLatitudeTitleTextView"
        app:layout_constraintEnd_toStartOf="@+id/countryLongitudeTextView"/>

    <TextView
        android:id="@+id/countryLongitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:textColor="@android:color/black"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/empty_value"
        app:layout_constraintStart_toEndOf="@+id/countryLongitudeTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryLatitudeTitleTextView"
        app:layout_constraintEnd_toStartOf="@+id/countryParenthesisTitleTextView"/>

    <TextView
        android:id="@+id/countryParenthesisTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/small_text_size"
        android:text="@string/parenthesis"
        app:layout_constraintStart_toEndOf="@+id/countryLongitudeTextView"
        app:layout_constraintTop_toBottomOf="@+id/countryLatitudeTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/coordinatesClickSpaceView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/countryLatitudeTitleTextView"
            app:layout_constraintTop_toTopOf="@+id/countryLatitudeTitleTextView"
            app:layout_constraintBottom_toBottomOf="@+id/countryLongitudeTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>